# permit_project

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: 270-10-1_time_entries_raw.json  bqe_candidates.json  bqe_target_detail.json
docs/: 01-project-selection.md  02-project-anatomy.md  03-time-analysis.md  04-deliverable-chain.md  05-agent-design.md  06-success-criteria.md
reference/: MANIFEST.md
scripts/: populate_all.py  run_fire_pump.py
src/eipop/calcs/: diesel_engine.py  ef_selection.py  emission_rates.py  model_rates.py
src/eipop/excel/: column_map.py  writer.py
src/eipop/models/: constants.py  emission_factors.py  source.py
src/eipop/parsers/: nameplate.py  spec_sheet.py
src/eipop/validation/: compare.py
tests/: test_calcs.py  test_ef_selection.py  test_excel_writer.py  test_nameplate_parser.py  test_spec_sheet_parser.py  test_validation.py
