[project]
name = "eipop"
version = "0.1.0"
description = "AI-assisted emissions inventory population for air quality permitting"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
